err/cfflib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cfflib'...
Compiling './lib/python3.5/site-packages/cfflib/cff.py'...
***   File "./lib/python3.5/site-packages/cfflib/cff.py", line 73
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cfflib/cfflib.py'...
***   File "./lib/python3.5/site-packages/cfflib/cfflib.py", line 779
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cfflib/cfflib2.py'...
***   File "./lib/python3.5/site-packages/cfflib/cfflib2.py", line 364
    print "Will not remove file %s from file system" % ele.tmpsrc
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cfflib/loadsave.py'...
***   File "./lib/python3.5/site-packages/cfflib/loadsave.py", line 118
    print "ERROR - there is no connectome metadata in this connectome"
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cfflib/schema'...
Listing './lib/python3.5/site-packages/cfflib/tests'...
Listing './lib/python3.5/site-packages/cfflib/tests/data'...
Listing './lib/python3.5/site-packages/cfflib/tests/data/CData'...
Listing './lib/python3.5/site-packages/cfflib/tests/data/CNetwork'...
Listing './lib/python3.5/site-packages/cfflib/tests/data/CSurface'...
Listing './lib/python3.5/site-packages/cfflib/tests/data/CTrack'...
Listing './lib/python3.5/site-packages/cfflib/tests/data/CVolume'...
Compiling './lib/python3.5/site-packages/cfflib/util.py'...
***   File "./lib/python3.5/site-packages/cfflib/util.py", line 135
    print "Working on element %s" % ele.name
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cfflib-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
